--- a/TP4_Newton.ipynb
+++ b/TP4_Newton.ipynb
@@ -36,10 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Le nombre dérivé est le coeficient directeur de la tangente au point \"a\"."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,10 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Ta : y = px + q\n",
+    "# p = f'(a)\n",
+    "# f(a) = f'(a)a + q\n",
+    "# q = f(a) - f'(a)a\n",
+    "\n",
+    "# Ta : y = f'(a)x + f(a) - f'(a)a   =>  y = f'(a)(x-a) + f(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# L'approximation affine de f au voisinage de a est => y = f'(a)(x-a) + f(a) + o(x-a) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,10 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# x1 = x0 - f(x0)/f'(x0)\n",
+    "# x2 = x1 - f(x1)/f'(x1)\n",
+    "# x3 = x2 - f(x2)/f'(x2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,10 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Ta : y = f'(xn)(x-xn) + f(xn)\n",
+    "\n",
+    "# La tengente intersecte la droite des abcisses au point xn-f(xn)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,10 +174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def newton(f,f2,x0,n):\n",
+    "    x = x0\n",
+    "    for i in range(n):\n",
+    "        if f2(x)!= 0:\n",
+    "            x = x-f(x)/f2(x)\n",
+    "        else:\n",
+    "            return False\n",
+    "    return x"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,11 +198,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def newton_graphe(f,f2,x0,n):\n",
+    "    absi= numpy.linspace (-1,3,20)\n",
+    "    x=x0\n",
+    "    plt.plot(absi,[f(t) for t in absi])\n",
+    "    plt.plot(absi,[0 for t in absi], 'black')\n",
+    "    for i in range(n):\n",
+    "        plt.plot(absi,[f2(x)*(t-x)+f(x) for t in absi])\n",
+    "        x=x-f(x)/ float(f2(x))\n"
    ]
   },
   {
@@ -201,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
